---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/complex_select_part_0_100.sql
snapshot_kind: text
---
SELECT
  CAST(contype AS TEXT) AS contype,
  conname,
  array_length(conkey, 1) AS ncol,
  conrelid AS resorigtbl,
  col AS resorigcol,
  ord
FROM
  pg_constraint
  LEFT OUTER JOIN LATERAL unnest(conkey) WITH ORDINALITY AS _ (col, ord)
  ON TRUE
WHERE
  contype IN ('p', 'f')
UNION
SELECT
  concat(contype, '_ref') AS contype,
  conname,
  array_length(confkey, 1) AS ncol,
  confrelid,
  col,
  ord
FROM
  pg_constraint
  LEFT OUTER JOIN LATERAL unnest(confkey) WITH ORDINALITY AS _ (col, ord)
  ON TRUE
WHERE
  contype = 'f';
